objects/AsiaEndUserInformations__c.object
<CustomObject>
    <fields>
        <fullName>AnyOtherDocuments__c</fullName>
        <label>AnyOtherDocuments</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AsiaProfitCalculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profit Calculation</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipLabel>EndUserInformations</relationshipLabel>
        <relationshipName>EndUserInformations_ProfitCalculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bacilluses2__c</fullName>
        <label>Bacilluses2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bacilluses__c</fullName>
        <label>Bacilluses</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BallisticMissiles2__c</fullName>
        <label>BallisticMissiles2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BallisticMissiles__c</fullName>
        <label>BallisticMissiles</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BiologicalWeapons2__c</fullName>
        <label>BiologicalWeapons2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BiologicalWeapons__c</fullName>
        <label>BiologicalWeapons</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChemicalWeapons2__c</fullName>
        <label>ChemicalWeapons2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChemicalWeapons__c</fullName>
        <label>ChemicalWeapons</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractState__c</fullName>
        <label>ContractState</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateResponsibleUser__c</fullName>
        <label>DateResponsibleUser</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DetailedInformation__c</fullName>
        <label>DetailedInformation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserInfo__c</fullName>
        <label>End User Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndUserInstallInfo__c</fullName>
        <label>End User Install Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndUserOrderNo__c</fullName>
        <label>End User Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaxOrTelephone__c</fullName>
        <label>FaxOrTelephone</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JEOLAddress__c</fullName>
        <label>JEOL Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nation__c</fullName>
        <label>Nation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NuclearWeapons2__c</fullName>
        <label>NuclearWeapons2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NuclearWeapons__c</fullName>
        <label>NuclearWeapons</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderNo__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization (Company)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PleaseDescribe__c</fullName>
        <label>PleaseDescribe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductsAndTechnology__c</fullName>
        <label>ProductsAndTechnology</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RemotelyPilotedVehicle2__c</fullName>
        <label>RemotelyPilotedVehicle2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RemotelyPilotedVehicle__c</fullName>
        <label>RemotelyPilotedVehicle</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResponsibleUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResponsibleUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EndUserInformations_ResponsibleUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScopeOfBusiness__c</fullName>
        <label>ScopeOfBusiness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>EndUserInformations</label>
    <nameField>
        <label>EndUserInformations</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>